--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Play Car-Duhl! The daily car guessing game" />
+  <meta name="description" content="Play My Daily Garage! The daily car guessing game" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,12 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title> Play Car-Duhl!</title>
+  <title> My Daily Garage</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root">Car-duhl!</div>
+  <div id="root">My Daily Garage</div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
