--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
   <div id="root">My Daily Garage</div>
   <!--
       This HTML file is a template.
